Package: future.BatchJobs
=========================

Version: 0.11.0-9000 [2016-05-20]
o Added predefined batchjobs_local(), batchjobs_interactive(),
  batchjobs_multicore(), batchjobs_lsf(), batchjobs_openlava(),
  batchjobs_sge(), batchjobs_slurm() and batchjobs_torque() futures.
o Added nbrOfWorkers() for BatchJobs futures.


Version: 0.11.0 [2016-05-16]
o Add package vignette.
o Now BatchJobsFutureError extends FutureError.
o WORKAROUND: The BatchJobs multicore cluster functions are designed
  to give some leeway for other processes on the local machine.
  Unfortunately, this may result in endless or extremeley long waiting
  for free resources before BatchJobs multicore jobs can be submitted.
  One reason is that BatchJobs tries to keep the average CPU load
  below a threshold that is calculated based on the number of cores.
  Unfortunately, this can result in starvation due to other processes,
  especially if the number of cores on the machine is small and/or if
  mc.cores is set to a small number.  Because of this, we disable this
  mechanism (by using BatchJobs parameter max.load=+Inf).
o backend("multicore=1") or other multicore specifications that
  result in single-core processing will use backend("local") instead.
o BUG FIX: backend("multicore-3") was interpreted as backend("multicore").


Version: 0.10.0 [2016-05-03]
o Now the BatchJobsFutureError records the captured BatchJobs
  output to further simplify post mortem troubleshooting.
o Now delete() for BatchJobsFuture will not remove the BatchJobs
  registry files if the BatchJobs has status 'error' or 'expired'
  and (new) option 'future.delete' is not set to FALSE (which it
  is if running in interactive mode).  The new setup is useful
  for troubleshooting failed BatchJobs futures in non-interactive
  R sessions, which otherwise would be cleaned out when the R
  session terminates (due to garbage collection calling delete()).
o BUG FIX: resolved() on a BatchJobs future could return FALSE