@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/backend.R
+% Please edit documentation in R/DEPRECATED.backend.R
 \name{backend}
 \alias{backend}
 \title{Switch backend to be used for asynchronous processing}
