@@ -6,6 +6,7 @@ o Added predefined batchjobs_local(), batchjobs_interactive(),
   batchjobs_multicore(), batchjobs_lsf(), batchjobs_openlava(),
   batchjobs_sge(), batchjobs_slurm() and batchjobs_torque() futures.
 o Added nbrOfWorkers() for BatchJobs futures.
+o CLEANUP: Deprecated backend().
 
 
 Version: 0.11.0 [2016-05-16]
